# ChordDetect-VST

./: .gitignore  CMakeLists.txt  README.md  do-push.ps1  push-to-github.ps1
Source/: AudioEffectChain.cpp  AudioEffectChain.h  ChordAdvisor.cpp  ChordAdvisor.h  ChordDetector.cpp  ChordDetector.h  HarmonyGenerator.cpp  HarmonyGenerator.h  MidiRecorder.cpp  MidiRecorder.h  MonoPitchDetector.cpp  MonoPitchDetector.h  PitchDetector.cpp  PitchDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
